--- a/templates/base.html
+++ b/templates/base.html
@@ -9,11 +9,14 @@
 
     <div class="navbar">
         {% if request.user.is_authenticated %}
-            <h3>안녕하세요, {{ user }}님</h3>
+            <h3>안녕하세요, {{ user.username }}님</h3>
+            <a href="{%url "accounts:profile" user.username %}"><button>내 프로필</button></a>
             <form action="{% url 'accounts:logout' %}" method="POST">
                 {% csrf_token %}
                 <input type="submit" value="로그아웃">
             </form>
+
+            <a href="{% url "accounts:edit" %}"><button>회원정보수정</button></a>
 
             <form action="{% url 'accounts:delete' %}" method="POST">
                 {% csrf_token %}
