--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -11,6 +11,16 @@
     <p>작성일시: {{ product.created_at }}</p>
     <p>수정일시: {{ product.updated_at }}</p>
 
+    <form action="{% url 'products:like' product.pk %}" method="POST">
+      {% csrf_token %}
+      {% if user.is_authenticated and user in product.like_users.all %}
+          <input type="submit" value="찜 취소">
+      {% else %}
+          <input type="submit" value="찜하기">
+      {% endif %}
+    </form>
+  
+
     <a href="{% url 'products:products' %}">목록 보기</a>
     <hr>
     <a href="{% url 'products:edit' product.pk %}"><button>글 수정</button></a>
