--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,5 @@
 {%extends 'base.html'%}
 {%block content%}
 <h1>스파르타마켓</h1>
+<a href="{% url 'products:products' %}">물건 보러 가기</a>
 {%endblock content%}
