정렬기능추가

--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -3,11 +3,15 @@
 {% block content %}
 		<h3>상품 목록 |총 상품 수: {{product_count}}개 </h3>
         <a href="{%url 'products:new'%}">상품 등록</a>
+        <form action="{%url 'products:products'%}" method="GET">
+            {{form.as_p}}
+            <button type="submit">정렬</button>
+        </form>
         <ul>
             {% for product in products %}
                 <li>
                     <a href="{%url 'products:product_detail' product.id%}">
-                        <div>[{{product.id}}]{{product.title}} |작성자: {{product.author.username}}</div>
+                        <div>[{{product.id}}]{{product.title}} |작성자: {{product.author.username}}|조회수:{{product.views}} |찜:{{product.like_users.count}}   </div>
                     </a>
                     <br>
                 </li>
