--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -11,6 +11,15 @@
     <p>작성일시: {{ product.created_at }}</p>
     <p>수정일시: {{ product.updated_at }}</p>
 
+    <p>해시태그:</p>
+    <ul>
+        {% for hashtag in product.hashtags.all %}
+            <li>#{{ hashtag.name }}</li>
+        {% empty %}
+            <li>해시태그가 없습니다.</li>
+        {% endfor %}
+    </ul>
+
     <form action="{% url 'products:like' product.pk %}" method="POST">
       {% csrf_token %}
       {% if user.is_authenticated and user in product.like_users.all %}
